--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,11 @@ repositories {
 }
 
 dependencies {
+    implementation('com.github.javafaker:javafaker:1.0.2')
     testImplementation (
         'com.codeborne:selenide:6.3.5',
         "org.junit.jupiter:junit-jupiter:5.8.2",
+        'com.github.javafaker:javafaker:1.0.2', ////https://github.com/DiUS/java-faker
         "org.slf4j:slf4j-simple:1.7.36"  //logger
     )
 }
