add comment to build.grad

--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,11 @@ allure {
         version.set("2.17.3")  //Allure report version
     }
     adapter {
-        aspectjVersion = "1.9.9"
+        aspectjVersion = "1.9.9" //without it allure annotated steps would not work
         aspectjWeaver.set(true) //@Steps
         frameworks {
             junit5 {
-                adapterVersion.set("2.17.3") // Allure JUnit5 vesrion
+                adapterVersion.set("2.17.3") // Allure JUnit5 version
             }
         }
     }
