--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,5 @@ gradle-app.setting
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/java,macos,gradle,windows,intellij
+
+/src/test/resources/config/credentials.properties
