--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ dependencies {
         "org.junit.jupiter:junit-jupiter:$junitVersion",
         "com.github.javafaker:javafaker:$javafakerVersion", ////https://github.com/DiUS/java-faker
         "org.slf4j:slf4j-simple:$slf4jVersion",  //logger
-        "io.qameta.allure:allure-selenide:$allureSelenideVersion" //selenide listener
+        "io.qameta.allure:allure-selenide:$allureSelenideVersion", //selenide listener
+        "org.aeonbits.owner:owner:1.0.12" //
     )
 }
 
@@ -59,6 +60,7 @@ tasks.withType(Test) {
     systemProperties(System.getProperties()) //get parameters from console
     useJUnitPlatform{
         excludeTags "sysProp"
+        excludeTags "owner"
     }
 
 
@@ -86,8 +88,15 @@ task test5(type: Test) {
     }
 }
 
+//properties/SystemPropertiesTests
 task sysProp(type: Test) {
     useJUnitPlatform {
         includeTags "sysProp"
+    }
+}
+
+task owner(type: Test) {
+    useJUnitPlatform {
+        includeTags "owner"
     }
 }
